src/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&family=Fredoka:wght@300..700&display=swap');

html {
    --dark: #A62639;
    --red: #DB324D;
    --bg: #511C29;
    --gray: #A29C9B;
    --dark-gray: #202020;
    --black: #111111;
}

body {
    margin: 0;
    background-color: var(--black);
    height: 100dvh;
}

* {
    font-family: "Fredoka";
    font-weight: normal;
    margin: 0;
}

.emphasis {
    position: relative;
    color: white;
    font-family: "Bitcount Grid Single", sans-serif;
}

.hero::before {
    position: absolute;
    content: '';
    background-color: var(--red);
    width: 100%;
    height: 100%;
    margin: unset;
    top: 0;
    left: 0;
    z-index: -1;
}

.hero {
    position: relative;
    background-color: var(--black);
    border-top-right-radius: 30%;
    border-top-left-radius: 70%;
    /* border-bottom-right-radius: 70%;
    border-bottom-left-radius: 30%; */
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: start;
    padding: 2rem;
    padding-top: 3rem;
    box-sizing: border-box;
}

.hero .main {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: start;
    padding: 5%;
    padding-top: 15rem;
    width: 100%;
    box-sizing: border-box;
    gap: 1rem;
}

.hero .main h1 {
    font-size: 6rem;
    color: white;
    line-height: 90%;
}

.hero .main p {
    width: 75%;
    font-size: 1.5rem;
    color: white;
    margin-top: 1rem;
}

.hero .main .buttons {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 2rem;
    width: 100%;
    margin: 1rem 0;
}

.hero .main .buttons a {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;

    width: 30%;
    padding: 1.5rem 2rem;
    border-radius: 5px;
    box-sizing: border-box;
    background-color: var(--dark-gray);
    color: white;
    text-decoration: none;
    font-size: 1.5rem;
}

.hero .main .buttons .github {
    background-color: white;
    color: black;
}

.hero .main .buttons .github img {
    height: 2rem;
    aspect-ratio: 1/1;
}


.projects::before {
    position: absolute;
    content: '';
    background-color: var(--black);
    width: 100%;
    height: 100%;
    margin: unset;
    top: 0;
    left: 0;
    z-index: -1;
}

.projects {
    position: relative;
    display: flex;
    flex-direction: column;
    padding: 2rem 15%;
    padding-top: 15rem;
    padding-bottom: 10rem;
    padding-right: 5%;
    border-top-right-radius: 50%;
    border-top-left-radius: 50%;

    border-bottom-right-radius: 5%;
    border-bottom-left-radius: 10%;
    
    background-color: #161616;
    color: white;
}

.projects .project {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 1rem;
}

.projects .project > img {
    width: 60%;
    border-radius: 1rem;

}

.projects .project .project_data .project_title {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding-bottom: 2rem;
    border-bottom: 2px solid var(--dark-gray);
}

.projects .project .project_data .project_title .featured {
    color: var(--red);
}

.projects .project .project_data .project_title h1 {
    font-size: 3rem;
}

.projects .project .project_data .project_title p {
    font-size: 1.2rem;
}

.projects .project .project_data .project_information {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding-top: 2rem;
}

.projects .project .project_data .project_information .cards {
    display: flex;
    gap: 1rem;
}

.projects .project .project_data .project_information .cards .card {
    background-color: var(--dark);
    border-radius: 5px;
    padding: .5rem 1rem;
}

.projects .project .project_data .project_information .buttons {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.projects .project .project_data .project_information .buttons a {
    display: flex;
    justify-content: center;
    gap: 1rem;

    width: 100%;
    padding: 1.5rem 2rem;
    border-radius: 5px;
    box-sizing: border-box;
    background-color: var(--dark);
    color: white;
    text-decoration: none;
    font-size: 1.3rem;
    align-items: center;
}

.projects .project .project_data .project_information .buttons .github {
    background-color: white;
    color: black;
}

.projects .project .project_data .project_information .buttons .github img {
    height: 2rem;
    width: 2rem;
    aspect-ratio: 1/1;
}

.infos {
    position: relative;
    display: flex;
    gap: 1rem;
    padding: 4rem 10%;
    padding-bottom: 7rem;
    margin-bottom: 3rem;
}

.infos .info {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    color: white;
    padding: 0 2rem;
}

.infos .info p {
    color: gray;
}


.vision::before {
    position: absolute;
    content: '';
    background-color: var(--black);
    width: 100%;
    height: 100%;
    margin: unset;
    top: 0;
    left: 0;
    z-index: -1;
}

.vision,
.philosophy {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 4rem 10%;
    padding-bottom: 7rem;
    border-top-right-radius: 10%;
    background-color: var(--red);
}

.philosophy {
    align-items: end;
    background-color: var(--black);
}

.philosophy * {
    text-align: end;
    color: white;
}

.vision h1,
.philosophy h1 {
    font-size: 3rem;
}

.vision p,
.philosophy p {
    margin-left: 1rem;
    margin-right: 1rem;
    font-size: 1.3rem;
    width: 30%;
}


@media(max-width: 700px) {
    .main h1 {
        font-size: 4rem !important;
    }

    .hero {
        flex-direction: column;
        width: 100% !important;
        height: fit-content !important;
    }

    .hero > div {
        width: 100% !important;
    }

    .projects .project {
        flex-direction: column;
    }

    .projects img {
        display: none;
    }

    .vision p,
    .philosophy p {
        width: 100%;
    }

    .infos {
        flex-direction: column;
    }
}

